--- a/index.html
+++ b/index.html
@@ -2,37 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>myslider-淡入淡出效果</title>
-    <link rel="stylesheet" href="css/myslider.css">
-    <script src="js/jquery-1.9.1.js"></script>
-    <script src="js/jquery.mySlider.js"></script>
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <title>myslider</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="header">
-    <a href="#" class="active">淡入淡出</a>
-    <a href="slide.html">左右滑动</a>
-    <a href="autoslide.html">自动播放</a>
-</div>
-<!-- 轮播图-->
-<div id="my-slider">
-    <ul class="slide-image">
-        <li><a href="#"><img src="img/1.jpg"></a></li>
-        <li><a href="#"><img src="img/2.jpg"></a></li>
-        <li><a href="#"><img src="img/3.jpg"></a></li>
-        <li><a href="#"><img src="img/4.jpg"></a></li>
-    </ul>
-    <!-- 左右按钮-->
-    <div class="slide-btn btn_l">&lt;</div>
-    <div class="slide-btn btn_r">&gt;</div>
-    <!-- 圆圈按钮-->
-    <ul class="circle-btn">
+    <h1>MySlider.js</h1>
 
-    </ul>
+    <h2>基于jQuery的轻量级轮播图插件</h2>
+    <span class="download">
+            <a href="https://github.com/RaniHu/myslider/tree/gh-pages">View on GitHub</a>
+            <a href="download/MySlider.zip" >Download .zip</a>
+            <a href="http://ranihu.github.io/mySliderDemo/">View the demo</a>
+    </span>
 </div>
+<div class="main-box">
+    <div class="main">
+        <section class="method">
+            <h3>如何调用此插件？</h3>
+            <ul>
+                <li>1.引用文件
+                    <pre>&lt;script src="js/jquery.js">&lt;/script&gt
+&lt;script src="js/MySlider.js">&lt;/script&gt</pre>
+                </li>
+                <li>2.元素绑定
+                    <pre>$("#element").MySlider();</pre>
+                </li>
+            </ul>
+        </section>
+        <section class="settings">
+            <h3>参数配置</h3>
+            <ul>
+                <li>1.默认参数
+                    <span>animate: "fadeIn",</span>
+                    <span>circleEvent: "mouseover",</span>
+                    <span>circleBtn: true,</span>
+                    <span>autoSlide: false,</span>
+                    <span>speed: "1500",</span>
+                    <span>autoSlideSpeed: "2000",</span>
+                    <span>selfAdaptive:true</span>
+                </li>
+                <li>2.示例
+                    <span>$("#my-slider").mySlider({</span>
+                    <span>animate:"slide",</span>
+                    <span>circleEvent:"click",</span>
+                    <span>speed:2000,</span>
+                    <span>autoSlide:true,</span>
 
-<script>
-    $("#my-slider").mySlider();
-</script>
+                </li>
+            </ul>
+        </section>
+        <div class="clearfix"></div>
+    </div>
+    <div class="clearfix"></div>
+
+</div>
+<div class="footer">
+    <a href="https://github.com/RaniHu">© designed by RaniHu</a>
+</div>
 
 </body>
 </html>
