--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>MySlider.js</h1>
 
     <h2>基于jQuery的轻量级轮播图插件</h2>
-    <span class="download">
+    <div class="download">
             <a href="https://github.com/RaniHu/myslider/tree/gh-pages">View on GitHub</a>
             <a href="download/MySlider.zip" >Download .zip</a>
             <a href="http://ranihu.github.io/mySliderDemo/">View the demo</a>
-    </span>
+    </div>
 </div>
 <div class="main-box">
     <div class="main">
@@ -30,6 +30,7 @@
                     <pre>$("#element").MySlider();</pre>
                 </li>
             </ul>
+            <div class="clearfix"></div>
         </section>
         <section class="settings">
             <h3>参数配置</h3>
@@ -53,10 +54,7 @@
                 </li>
             </ul>
         </section>
-        <div class="clearfix"></div>
     </div>
-    <div class="clearfix"></div>
-
 </div>
 <div class="footer">
     <a href="https://github.com/RaniHu">© designed by RaniHu</a>
