--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 <div class="header">
     <h1>MySlider.js</h1>
-
     <h2>基于jQuery的轻量级轮播图插件</h2>
     <div class="download">
             <a href="https://github.com/RaniHu/myslider/tree/gh-pages">View on GitHub</a>
@@ -23,7 +22,8 @@
             <h3>如何调用此插件？</h3>
             <ul>
                 <li>1.引用文件
-                    <pre>&lt;script src="js/jquery.js">&lt;/script&gt
+                    <pre>&lt;link rel="stylesheet" href="css/style.css"">
+&lt;script src="js/jquery.js">&lt;/script&gt
 &lt;script src="js/MySlider.js">&lt;/script&gt</pre>
                 </li>
                 <li>2.元素绑定
