修改字体大小

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3>如何调用此插件？</h3>
             <ul>
                 <li>1.引用文件
-                    <pre>&lt;link rel="stylesheet" href="css/style.css"">
+                    <pre>&lt;link rel="stylesheet" href="css/style.css">
 &lt;script src="js/jquery.js">&lt;/script&gt
 &lt;script src="js/MySlider.js">&lt;/script&gt</pre>
                 </li>
